examples/test/testpolicy11075.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11075
  namespace: namespace4
spec:
  podSelector:
    matchLabels:
      key9: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value9
          key36: value30
      podSelector:
        matchLabels:
          key11: value47
          key26: value5
          key39: value31
